...
    tools:context=".authentification.LoginActivity">

    <!--    https://stackoverflow.com/questions/43143468/how-to-center-the-elements-in-constraintlayout-->


    <ScrollView
        android:id="@+id/sign_in_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp">

        <LinearLayout
            android:layout_width="match_parent"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/sign_in_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email"
                android:autofillHints="me@example.net"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/sign_in_pswd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:autofillHints="password" />

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="signInButtonClicked"
                android:text="@string/sign_in" />

            <Button
...
