<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:id="@+id/event_item">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:id="@+id/imageIv"
            android:src="@mipmap/ic_launcher"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/titleTv"
            android:text="Title"
            android:textSize="22sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_toEndOf="@id/imageIv"
            android:layout_marginStart="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Description"
            android:id="@+id/descriptionTv"
            android:textSize="18sp"
            android:textColor="#A9A9A9"
            android:textStyle="bold"
            android:layout_toEndOf="@id/imageIv"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_below="@id/titleTv"
            />

    </RelativeLayout>
</androidx.cardview.widget.CardView>