<resources>
    <string name="app_name">PolyCrowd</string>
    <!-- CNF_EVENT -->
    <string name="event_title">*event_title*</string>
    <string name="event_is_public">Public</string>
    <string name="event_public_hint">If the event should be displayed to other users</string>
    <string name="event_name">Event Name</string>
    <string name="event_name_hint">Event Name</string>
    <string name="event_submit">Save Changes</string>
    <string name="event_type_hint">Event Type</string>
    <string name="event_calendar_hint">Schedule calendar url</string>
    <string name="event_is_emergency_enabled">Emergencies</string>
    <string name="event_emergency_hint">If the event should use the emergency button feature</string>
    <string-array name="event_type_list">
        <item value="FESTIVAL">Festival</item>
        <item value="CONCERT">Concert</item>
        <item value="CONVENTION">Convention</item>
        <item value="OTHER">Other</item>
    </string-array>
    <string name="event_details">Event Details</string>
    <string name="event_date_start">Start Date</string>
    <string name="event_date_end">End Date</string>
    <string name="event_add">Add Event</string>
    <string name="title_activity_main">Map</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_user_exists">User already exists</string>
    <string name="sign_up_email_exists">Email already exists</string>
    <string name="sign_up_success">Sign up success</string>
    <string name="password">password</string>>
    <string name="username">username</string>
    <string name="register">Register</string>>
    <string name="email_hint">Your email address</string>>
    <string name="repeat_password_hint">Confirm the password</string>>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_success">Sign in success</string>
    <string name="sign_in_failure">Incorrect email or password</string>
    <string name="email">email</string>
    <string name="date_format">dd-MM-yyyy</string>
    <string name="forgot_password">forgot password</string>
    <string name="reset_password">Reset password</string>
    <string name="send_reset_link">Send reset link</string>
    <string name="reset_link_sent">A reset link has been sent</string>
    <string name="reset_failure">The link could not be sent. Please try again later.</string>
    <string name="reset_email_not_found">Email not associated to any user. Please sign up.</string>
    <string name="invite_link_dialog_title">Here is the invite link:</string>
    <string name="invite_organizer">Invite Organizer</string>
    <string name="revoke_organizer">Revoke Organizer</string>
    <string name="organizers">Organizers</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="organizer_invite_text">Log in to view the invite</string>
    <string name="organizer_invite_text_1">"You are invited to become an organizer of the event</string>
    <string name="organizer_invite_text_2">Sign in to accept the invitation</string>
    <string name="goToUserEventsList">Events</string>
    <string name="goToUserFriendsList">Friends</string>
    <string name="profile">Profile</string>
    <string name="event_add_success">Event added</string>
    <string name="event_add_failure">Error occurred while adding the event</string>
    <string name="group">Your group</string>
    <string name="invite_group">Invite someone to group</string>
    <string name="leave_group">Leave group</string>
    <string name="group_invite_text">You are invited to a group.</string>
    <string name="create_group">Create group</string>
    <string name="sos_main">Emergency</string>
    <string name="edit_main">Edit</string>
    <string name="sos_type">What is the reason for the emergency ??</string>
    <string name="invite_security">Invite Security</string>
    <string name="security">Security</string>
    <string name="my_groups">MyGroups</string>
    <string name="create_new_group_button">create_group</string>
    <string name="group_name_hint">group name</string>
    <string name="event_id_hint">event id</string>
    <string-array name="sos_type_list">
        <item value="LOSTMINOR">Lost Minor</item>
        <item value="ACCIDENT">Accident</item>
        <item value="DRUNK">Drunk</item>
        <item value="OTHER">Other</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="group_submit">OK</string>
</resources>
